css: Support caption of image gallery

--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -78,6 +78,11 @@
                         elementParse: function (item) {
                             item.src = item.el.attr('src');
                         }
+                    },
+                    image: {
+                        titleSrc: function (item) {
+                            return item.el.attr('alt');
+                        }
                     }
                 });
             });
