--- a/app/views/index/myOrganizationList_partial.scala.html
+++ b/app/views/index/myOrganizationList_partial.scala.html
@@ -7,14 +7,14 @@
 @(organization: Organization, favored:Boolean, isLast:Boolean = false)
 @import utils.TemplateHelper._
 
-<li class="user-li @if(isLast){favored}" onclick="window.location='@routes.OrganizationApp.organization(organization.name)';">
+<li class="user-li @if(isLast){favored}" data-location="@routes.OrganizationApp.organization(organization.name)">
     <div class="org-list project-flex-container">
         <div class="project-item project-item-container">
             <div class="flex-item site-logo">
                 <i class="project-avatar">@if(hasOrganizationLogo(organization)){<img class="logo" src="@urlToOrganizationLogo(organization)">}else{<span class="dummy-25px"> </span>}</i>
             </div>
             <div class="projectName-owner flex-item">
-                <div class="project-name org-name flex-item"><a href="@routes.OrganizationApp.organization(organization.name)">@organization.name</a></div>
+                <div class="project-name org-name flex-item">@organization.name</div>
                 <div class="project-owner flex-item"></div>
             </div>
         </div>
