--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -224,6 +224,10 @@
         display: block !important;
     }
 
+    .show-in-mobile-inline {
+        display: inline-block !important;
+    }
+
     .hide-in-mobile {
         display: none !important;
     }
