--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -459,7 +459,7 @@
         });
 
         // detect comment which contains mention at me
-        $(".comment-body:contains('@UserApp.currentUser().loginId')").closest(".comment").addClass("mentioned");
+        $(".comment-body:contains('@UserApp.currentUser().getPureNameOnly')").closest(".comment").addClass("mentioned");
     });
 </script>
 <script>
