--- a/app/assets/stylesheets/less/_variables.less
+++ b/app/assets/stylesheets/less/_variables.less
@@ -63,6 +63,7 @@
 @yobi-orange : #FF7332;
 @yobi-orange-dark : #E95E01;
 @yobi-red : #C93426;
+@yona-red : #f44336;
 @yobi-red-dark : #B13427;
 @yobi-white :#FFF;
 @yobi-white-dark :#F2F2F2;
