--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -7020,3 +7020,17 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         }
     }
 }
+
+.subtask-mark {
+    border: 1px solid #e95e01;
+    border-radius: 3px;
+    padding: 2px 5px;
+    font-size: 14px;
+    color: #e95e01;
+    margin-right: 5px;
+}
+.subtask-number {
+    color: darkgrey;
+    font-size: 12px;
+    margin-right: 5px;
+}
